<?xml version="1.0"?>
<package format="2">
  <name>gmplot</name>
  <version>0.0.0</version>
  <description>
    ROS wrapping of gmplot library
  </description>
  <maintainer email="mradov@gmail.com">Micho Radovnikovich</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

  <export>
  </export>
</package>
