<?xml version="1.0"?>
<package format="2">
  <name>gmplot_msgs</name>
  <version>0.0.0</version>
  <description>
    Message definitions for gmplot ROS wrapper
  </description>
  <maintainer email="mradov@gmail.com">Micho Radovnikovich</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  
  <export>
  </export>
</package> 
